[package]
name = "claude"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "*", default-features=false, features = ["client", "gateway", "rustls_backend", "model", "framework", "standard_framework"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
fastrand = "*"
orion = "*"
toml = "*"
regex = "*"
reqwest = { version = "*", default-features=false, features = ["json", "rustls-tls"] }
json = "*"

serde = { version = "*", features = ["derive"]}
serde_json = "*"
serde_regex = "*"
